--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <div class="slide-content">
                         <div class="text-content">
                             <h2>Gabriela Rodrigues</h2>
-                            <p>Sou professora e tenho uma paixão enorme por gente ouvir e transformar vidas é o que me
+                            <p>Sou professora e tenho uma paixão enorme por gente.Ouvir e transformar vidas é o que me
                                 move.
                                 Decidi
-                                me aventurar no mundo do copywriting em busca de novas formas de comunicar, conectar e
+                                me aventurar no mundo do copywriting em busca de novas formas de me comunicar, conectar e
                                 impactar.
                                 Apaixonada por comunicação, pessoas e conexões, encontrei no copywriting a forma
                                 perfeita de
@@ -56,7 +56,7 @@
                 <div class="slide">
                     <div class="slide-content">
                         <div class="text-content img-config">
-                            <h2>A proposta foi criar uma açao para MC Donald com o intuito de criar um novo olhar sobre
+                            <h2>A proposta foi criar uma ação para o MC Donald com o intuito de criar um novo olhar sobre
                                 a marca.
                             </h2>
                         </div>
@@ -70,7 +70,7 @@
                 <div class="slide">
                     <div class="slide-content">
                         <div class="text-content">
-                            <h2> A ideia foi mostrar que a vida nao para e que correr e expenciar novos desafios faz
+                            <h2> A ideia foi mostrar que a vida não para e que correr e experienciar novos desafios faz
                                 parte da vida.
                             </h2>
                             <div class="image-content">
